<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context="com.example.erigom.myapplication.MainActivity">

    <Button
        android:id="@+id/miBtn1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/liner" />

    <Button
        android:id="@+id/miBtn2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/table" />

    <Button
        android:id="@+id/miBtn3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/relative" />

    <Button
        android:id="@+id/miBtn4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/check" />

    <Button
        android:id="@+id/miBtn5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/radio" />

    <Button
        android:id="@+id/miBtn6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tipos" />

</LinearLayout>
